<resources>
    <string name="app_name">Rapid poll</string>
    <string name="polls">Polls</string>
    <string name="results">Results</string>
    <string name="my_polls">My Polls</string>
    <string name="device_settings">Device settings</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="started_x_days_ago">started %1$d days ago</string>
    <string name="x_votes">%1$d votes</string>
    <string name="sort_by">Sort by:</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="vote">Votes</string>
    <string name="status">Status</string>
    <string name="publicity">Public</string>
    <string name="pollsettings">POLL SETTINGS</string>
    <string name="anonymous">Anonymous</string>
    <string name="allowtocomment">Allow to comment</string>
    <string name="multichoice">Multichoice</string>
    <string name="add_question">Add question</string>
    <string name="add_alternative">Add alternative</string>
    <string name="multi">multi</string>
    <string name="single">single</string>
    <string name="add_comment">Add comment</string>
    <string name="acceptcompleteonly">Accept complete only</string>
    <string name="notCompletedPoll">You haven\'t completed your vote.</string>
    <string name="enter_email">This is a non-anonymous poll, please enter your e-mail address</string>
    <string name="enter_email_wrong_format">This is a non-anonymous poll, please enter your e-mail address\n\nWrong e-mail format!</string>
    <string name="email_hint">Email address</string>
    <string name="submit_success">You have successfully submitted your vote</string>
    <string name="invite">Invite</string>
    <string name="closed_x_days_ago">closed %1$d days ago</string>

    <string name="gcm_send_message">Token retrieved and sent to server!</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while registering your device. Please try again later.</string>
    <string name="close">Close</string>
    <string name="reopen">Reopen</string>
    <string name="poll_code">Poll code</string>
    <string name="share">Share</string>
    <string name="no_answers_received">No answers received to this question.</string>
    <string name="create_new_poll">Create New Poll</string>
    <string name="no_search_results">No results for the given search term.</string>
    <string name="no_getpoll_results">No polls were found.</string>
    <string name="shareStatisticsText">Result of %s Poll from Rapid Poll application. Check this out here: </string>
    <string name="exportDialogQuestion">What would you like to share?</string>
    <string name="exportPDF">Result screen</string>
    <string name="exportXLS">Analytical data</string>
    <string name="question">Question</string>
    <string name="alternative">Alternative</string>
    <string name="poll_invite">Vote to the %1$s Poll in Rapid Poll application with this code: %2$s</string>
    <string name="poll_voted_invite">I have just voted %1$s poll in Rapid Poll application, check it here!</string>
    <string name="successful_poll_submit">You successfully published your Poll!</string>
    <string name="successful_poll_submit_with_code">You successfully published your Poll! Your poll is restricted and can be open by Poll code which is: %1$d</string>
    <string name="successful_reopen">You successfully reopened your Poll!</string>
    <string name="successful_reopen_with_code">You successfully reopened your Poll! Your poll is restricted and can be open by Poll code which is: %1$s</string>
    <string name="successful_close">You successfully closed your Poll!</string>
    <string name="successful_close_with_code">You successfully closed your Poll! Your poll is restricted and result can be checked by Poll code which is: %1$s</string>
    <string name="poll_created_invite">You can open my Restricted Poll with this poll code %1$s or link:</string>
    <string name="poll_created_invite_without_code">Check my Poll:</string>
    <string name="poll_invite_without_code">Vote to the %1$s Poll in Rapid Poll application</string>
    <string name="tryagain">Try again</string>
    <string name="pollresult_comm_failure">Can\'t get poll result details from server.</string>
</resources>
