<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/background_dark_purple">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/no_search_results" />

        <View
            android:id="@+id/list_size_helper"
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_view_height"
            android:layout_alignParentTop="true"
            android:visibility="gone" />

        <HorizontalScrollView
            android:id="@+id/sort_horizontal_scrollview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_view_height"
            android:layout_alignParentTop="true"
            android:background="@color/sortby_background_purple"
            android:scrollbars="none"
            android:visibility="invisible">

            <LinearLayout
                android:id="@+id/sortby_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="14dp"
                    android:paddingBottom="2dp"
                    android:text="@string/sort_by"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/sort_by_date_button"
                    style="@style/SortByTextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/date" />

                <Button
                    android:id="@+id/sort_by_title_button"
                    style="@style/SortByTextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title" />

                <Button
                    android:id="@+id/sort_by_vote_button"
                    style="@style/SortByTextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vote" />

                <Button
                    android:id="@+id/sort_by_status_button"
                    style="@style/SortByTextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status" />

                <Button
                    android:id="@+id/sort_by_publicity_button"
                    style="@style/SortByTextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publicity" />
            </LinearLayout>
        </HorizontalScrollView>

        <com.marshalchen.ultimaterecyclerview.UltimateRecyclerView
            android:id="@+id/paging_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/list_size_helper"
            android:layout_marginTop="2dp"
            android:background="@color/background_dark_purple"
            android:divider="@android:color/black"
            android:listDivider="@drawable/actionbar_gradient"
            android:scrollbars="none" />

        <include
            android:id="@+id/centered_loading_view"
            layout="@layout/loadingview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sort_horizontal_scrollview"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp" />
    </RelativeLayout>

    <include
        android:id="@+id/navButtonsLayout"
        layout="@layout/navbuttons"
        android:layout_width="match_parent"
        android:layout_weight="0"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</LinearLayout>